<?xml version="1.0"?>
<package>
  <name>behavior_viewer</name>
  <version>0.0.0</version>
  <description>
    Behaviour viewer
  </description>

  <maintainer email="gpassault@labri.fr">Grégoire Passault</maintainer>

  <license>MIT</license>

  <author email="gpassault@labri.fr">Grégoire Passault</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
